@@ -3,6 +3,8 @@ CHANGES.txt - 09/29/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- Fixed a performance issue with the ippReadIO()
+	  implementation (STR #1284)
 	- Fixed a performance issue with the scheduler's implicit
 	  class implementation (STR #1283)
 	- The pdftops filter now adds the Title and Creator
